apps/fashion-store-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fashion-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fashion-store
  template:
    metadata:
      labels:
        app: fashion-store
    spec:
      containers:
      - name: fashion-store
        image: seidut/zay:1.3 
        ports:
        - containerPort: 80 # The container listens on port 80
