apps/fashion-store-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fashion-store-service
spec:
  type: ClusterIP
  selector:
    app: fashion-store
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
